--- a/src/login/login.css
+++ b/src/login/login.css
@@ -4,24 +4,28 @@
 }
 .blackBack {
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    overflow: hidden;
+    height: max-content;
+   
    
     background-color: #000000;
    
   }
   .icon {
     max-width: 100%;
-    max-height: 100%;
+    max-height: 90vh;
     left: 24%;
     top: 10%;
     position: absolute;
     overflow: hidden;
     overflow-y: hidden;
-    background-size: contain;
+    background-size: cover;
   }
   .blur1 {
     
     width: 100%;
+     min-height: 100vh;
     gap: 2.3%;
     display: flex;
     flex-direction: row;
@@ -56,10 +60,10 @@
     justify-content: center;
     align-items: center;
   }
-  .title1 {
+  .titlelogin {
     width:80%;
     color: #efefef;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     font-weight: 700;
     font-family: Montserrat;
   }
@@ -124,11 +128,11 @@
   }
   input{
     color: black;
-    font-size: 1.3rem;
+    font-size: 1.7rem;
     font-family: Bebas Neue;
     padding-left: .8rem;
     text-transform: none;
-    letter-spacing: 1.2px;
+    
   }
   .whiteFlexColumn {
      width: 100%;
@@ -206,6 +210,47 @@
     background-color: #f08456;
   }
   
+
+  @media screen and (max-width: 768px)  {
+
+    .blur1 {
+    
+      width: 100%;
+      gap: 6rem;
+      display: flex;
+      flex-direction: column;
+      
+      
+      justify-content: center;
+      align-items: center;
+      padding: 18% 0px 21% 0px;
+      background-color: rgba(0, 0, 0, 0.1);
+      backdrop-filter: blur(20px);
+    }
+    .newGroup {
+      width: 80%;
+      gap: 2rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    .form1 {
+      min-width: 8cm;
+      height: 26%;
+      max-width: fit-content;
+      gap: 2rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding:  1.2rem;
+      border-radius: 8px;
+      background-color: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(20px);
+    }
+
+  }
   
 
 
